# TestSwig

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/ru/dbelevtsev/ndkswing/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: HelloWorld.cpp  HelloWorld.h  HelloWorld.i  IHelloWorld.h  INativeLib.h  NativeLib.cpp  NativeLib.h  NativeLib.i
app/src/main/java/ru/dbelevtsev/ndkswing/: MainActivity.java  TheApp.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/ru/dbelevtsev/ndkswing/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
